[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello_world_mcp"
version = "0.1.0"
description = "A simple 'Hello World' MCP server for Warp Terminal"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "mcp",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]

[tool.setuptools]
packages = ["hello_world_mcp"]
