[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_hello_warp_mcp"
version = "0.1.0"
description = "A simple 'Hello World' MCP server for Warp Terminal"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "mcp",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]

[tool.setuptools]
packages = ["python_hello_warp_mcp"]
